2005-03-25  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_in.c, src/xcb_list.c, src/xcbint.h:
	Add a queue ADT. Currently implemented using the list ADT, but
	analysis will probably suggest a better data structure. The
	split is intended to help that analysis.

2005-03-25  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_in.c, src/xcb_list.c, src/xcbint.h:
	Remove _xcb_list_length. (Two callers in xcb_in didn't actually
	care about the returned value beyond "empty" or "non-empty",
	which they can get other ways.) _xcb_in_events_length became
	obsolete in the process, and I took _xcb_list_clear out of
	xcbint.h while I was at it because only _xcb_list_delete calls
	it these days.

2005-03-25  Jamey Sharp  <jamey@minilop.net>

	* src/xcb.h, src/xcb_in.c:
	Remove XCBEventQueueLength and XCBEventQueueClear: they're not
	part of the new API, and they interfere with analysis of the
	_xcb_list implementation.

2005-03-24  Josh Triplett  <josh@freedesktop.org>

	* configure.ac:
	Change pdx.freedesktop.org to lists.freedesktop.org in package
	email address.

2005-03-23  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_conn.c, src/xcb_in.c:
	avn@daemon.hole.ru pointed out two memory leaks in XCB, which
	this update fixes. I also introduced a third a couple of days
	ago, which this fixes as well.

2005-03-23  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_in.c:
	Quit storing an "error" flag: it's redundant with the contents
	of the packet that it was stored with.

2005-03-22  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_in.c, src/xcbint.h:
	My recent Xlib patch stressed XCB's pending reply queue in ways
	it has never been stressed before, with thousands of entries.
	Profiling revealed that wake_up_next_reader was taking most of
	the cycles of my test app with its linear search of the reply
	queue. So I gave it its own 'readers' queue, which can have at
	most one entry per thread, and which can be no more than the
	number of pending replies. In the current implementation the