@@ -1,5 +1,10 @@
 2005-03-25  Jamey Sharp  <jamey@minilop.net>
 
+	* src/xcb_list.c, src/xcbint.h:
+	Add _xcb_queue_is_empty.
+
+2005-03-25  Jamey Sharp  <jamey@minilop.net>
+
 	* src/xcb_in.c, src/xcb_list.c, src/xcbint.h:
 	Add a queue ADT. Currently implemented using the list ADT, but
 	analysis will probably suggest a better data structure. The
